--- a/app/src/main/res/layout/activity_new_venue_3.xml
+++ b/app/src/main/res/layout/activity_new_venue_3.xml
@@ -54,10 +54,10 @@
                 android:background="@drawable/round_shpae_blue10e7dc"
                 android:padding="@dimen/_5sdp"
                 android:text="Venue Image Upload"
-                android:textSize="@dimen/_14ssp"
                 android:textAllCaps="false"
                 android:textColor="@color/WhiteFFFFFF"
                 android:textColorHint="@color/GreyCDCDCD"
+                android:textSize="@dimen/_14ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -65,6 +65,18 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.02" />
 
+
+            <ImageView
+                android:id="@+id/venue_image_IV"
+                android:layout_width="@dimen/_150sdp"
+                android:layout_height="@dimen/_150sdp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/submit_BTN"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/submit_BTN"
+                app:layout_constraintTop_toBottomOf="@+id/venue_image__upload_BTN"
+                app:layout_constraintVertical_bias="0.07999998" />
 
             <Button
                 android:id="@+id/submit_BTN"
@@ -79,8 +91,21 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/venue_image__upload_BTN"
+                app:layout_constraintTop_toBottomOf="@+id/venue_image_IV"
                 app:layout_constraintVertical_bias="0.1" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:progressTint="@color/IndianRed"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </android.support.constraint.ConstraintLayout>
