--- a/app/src/main/res/layout/fragment_hot_venues.xml
+++ b/app/src/main/res/layout/fragment_hot_venues.xml
@@ -2,18 +2,30 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/gradient_blue"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/gradient_blue">
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/no_venue_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="There is no event right now"
-        android:textStyle="bold"
+        android:text="There is no venue right now"
+        android:textColor="@color/WhiteFFFFFF"
         android:textSize="@dimen/_14ssp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/venues_RV"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/layout_venue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
