--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#10E7DC</color>
     <color name="colorPrimaryDark">#1B9CE5</color>
-    <color name="colorAccent">#1B9CE5</color>
+    <color name="colorAccent">#10E7DC</color>
 
     <color name="transparent">#0000</color>
 
@@ -26,7 +26,7 @@
     <color name="Black000000">#000000</color>
     <color name="GreyCDCDCD">#CDCDCD</color>
 
-    <color name="IndianRed">#CD5C5C</color>
+    <color name="IndianRed">#cd5c5c</color>
     <color name="PersianPink">#F77FBE</color>
     <color name="ButterscotchOrange">#E09540</color>
     <color name="TealGreen">#008080</color>
