--- a/app/src/main/res/layout/activity_new_event_2.xml
+++ b/app/src/main/res/layout/activity_new_event_2.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/gradient_blue"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.NewEventFirstActivity">
+    tools:context=".activities.NewEventSecondActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="cursive"
             android:gravity="center"
-            android:text="New Venue"
+            android:text="New Event"
             android:textStyle="bold"
             android:textColor="@color/WhiteFFFFFF"
             android:textSize="@dimen/_20ssp" />
@@ -48,15 +48,16 @@
 
 
             <EditText
-                android:id="@+id/venue_name_ET"
+                android:id="@+id/event_name_ET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/round_shpae_blue254e58"
+                android:background="@color/WhiteFFFFFF"
                 android:ems="10"
-                android:hint="Venue Name"
+                android:hint="Event Name"
                 android:inputType="textPersonName"
-                android:padding="@dimen/_5sdp"
-                android:textColor="@color/WhiteFFFFFF"
+                android:padding="@dimen/_10sdp"
+                android:textColor="@color/Black000000"
+                android:textSize="@dimen/_14ssp"
                 android:textColorHint="@color/GreyCDCDCD"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -74,14 +75,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/venue_name_ET"
-                app:layout_constraintVertical_bias="0.02">
+                app:layout_constraintTop_toBottomOf="@+id/event_name_ET"
+                app:layout_constraintVertical_bias="0.1">
 
                 <Spinner
                     android:id="@+id/event_type_SPNR"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/Blue254E58"
+                    android:background="@color/WhiteFFFFFF"
                     android:popupBackground="@color/transparent"
                     android:spinnerMode="dropdown" />
 
@@ -95,24 +96,33 @@
             </RelativeLayout>
 
 
-            <TextView
-                android:id="@+id/venue_address_TV"
+            <RelativeLayout
+                android:id="@+id/event_subtype_container_RL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/round_shpae_blue254e58"
-                android:ems="10"
-                android:hint="Venue Address"
-                android:padding="@dimen/_5sdp"
-                android:textColor="@color/WhiteFFFFFF"
-                android:textColorHint="@color/GreyCDCDCD"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/event_type_container_RL"
-                app:layout_constraintVertical_bias="0.02" />
+                app:layout_constraintTop_toBottomOf="@+id/event_type_container_RL"
+                app:layout_constraintVertical_bias="0.1">
 
+                <Spinner
+                    android:id="@+id/event_subtype_SPNR"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/WhiteFFFFFF"
+                    android:popupBackground="@color/transparent"
+                    android:spinnerMode="dropdown" />
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@id/event_subtype_SPNR"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:src="@drawable/ic_arrow_drop_down" />
+
+            </RelativeLayout>
 
             <Button
                 android:id="@+id/next_BTN"
@@ -127,7 +137,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/venue_address_TV"
+                app:layout_constraintTop_toBottomOf="@+id/event_subtype_container_RL"
                 app:layout_constraintVertical_bias="0.1" />
 
 
