--- a/app/src/main/res/layout/activity_new_event_1.xml
+++ b/app/src/main/res/layout/activity_new_event_1.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/gradient_blue"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.NewEventFirstActivity">
+    tools:context=".activities.NewEventSecondActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -47,82 +47,39 @@
             android:layout_height="match_parent">
 
 
-            <EditText
-                android:id="@+id/event_name_ET"
+            <com.mancj.materialsearchbar.MaterialSearchBar
+                android:id="@+id/venue_name_SearchBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/round_shpae_blue254e58"
-                android:ems="10"
-                android:hint="Event Name"
-                android:inputType="textPersonName"
-                android:padding="@dimen/_5sdp"
-                android:textColor="@color/WhiteFFFFFF"
-                android:textColorHint="@color/GreyCDCDCD"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.02" />
+                app:layout_constraintVertical_bias="0.02"
+                app:mt_hint="Venue Name"
+                app:mt_placeholder="Venue Name"
+                app:mt_placeholderColor="@color/GreyCDCDCD"
+                app:mt_searchBarColor="@color/WhiteFFFFFF"
+                app:mt_searchIconTint="@color/Black000000" />
 
 
-            <RelativeLayout
-                android:id="@+id/event_type_container_RL"
+
+            <TextView
+                android:id="@+id/venue_address_TV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/WhiteFFFFFF"
+                android:text="Venue Address"
+                android:textSize="@dimen/_14ssp"
+                android:textColor="@color/Black000000"
+                android:padding="@dimen/_10sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/event_name_ET"
-                app:layout_constraintVertical_bias="0.02">
-
-                <Spinner
-                    android:id="@+id/event_type_SPNR"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/Blue254E58"
-                    android:popupBackground="@color/transparent"
-                    android:spinnerMode="dropdown" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@id/event_type_SPNR"
-                    android:layout_marginEnd="@dimen/_10sdp"
-                    android:src="@drawable/ic_arrow_drop_down" />
-
-            </RelativeLayout>
-
-
-            <RelativeLayout
-                android:id="@+id/event_subtype_container_RL"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/event_type_container_RL"
-                app:layout_constraintVertical_bias="0.02">
-
-                <Spinner
-                    android:id="@+id/event_subtype_SPNR"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/transparent"
-                    android:popupBackground="@color/Blue254E58"
-                    android:spinnerMode="dropdown" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@id/event_subtype_SPNR"
-                    android:layout_marginEnd="@dimen/_10sdp"
-                    android:src="@drawable/ic_arrow_drop_down" />
-
-            </RelativeLayout>
-
+                app:layout_constraintTop_toBottomOf="@id/venue_name_SearchBar"
+                app:layout_constraintVertical_bias="0.1" />
 
             <Button
                 android:id="@+id/next_BTN"
@@ -137,8 +94,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/event_subtype_container_RL"
-                app:layout_constraintVertical_bias="0.1" />
+                app:layout_constraintTop_toBottomOf="@+id/venue_address_TV"
+                app:layout_constraintVertical_bias="0.15" />
 
 
         </android.support.constraint.ConstraintLayout>
