--- a/app/src/main/res/layout/activity_new_event_4.xml
+++ b/app/src/main/res/layout/activity_new_event_4.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="cursive"
             android:gravity="center"
-            android:text="New Venue"
+            android:text="New Event"
             android:textStyle="bold"
             android:textColor="@color/WhiteFFFFFF"
             android:textSize="@dimen/_20ssp" />
@@ -47,17 +47,17 @@
             android:layout_height="match_parent">
 
 
-            <EditText
-                android:id="@+id/venue_main_event_ET"
+            <Button
+                android:id="@+id/event_image__upload_BTN"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/round_shpae_blue254e58"
-                android:ems="10"
-                android:hint="Venue Main Event (e.g. Sport)"
-                android:inputType="textPersonName"
+                android:background="@color/WhiteFFFFFF"
                 android:padding="@dimen/_5sdp"
-                android:textColor="@color/WhiteFFFFFF"
+                android:text="Event Image Upload"
+                android:textAllCaps="false"
+                android:textColor="@color/Black000000"
                 android:textColorHint="@color/GreyCDCDCD"
+                android:textSize="@dimen/_14ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -65,31 +65,25 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.02" />
 
-            <EditText
-                android:id="@+id/venue_sub_events_ET"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/round_shpae_blue254e58"
-                android:ems="10"
-                android:hint="Venue Sub Events (e.g. Cricket, Football)"
-                android:inputType="textPersonName"
-                android:padding="@dimen/_5sdp"
-                android:textColor="@color/WhiteFFFFFF"
-                android:textColorHint="@color/GreyCDCDCD"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/venue_main_event_ET"
-                app:layout_constraintVertical_bias="0.02" />
 
+            <ImageView
+                android:id="@+id/event_image_IV"
+                android:layout_width="@dimen/_150sdp"
+                android:layout_height="@dimen/_150sdp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/submit_BTN"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/submit_BTN"
+                app:layout_constraintTop_toBottomOf="@+id/event_image__upload_BTN"
+                app:layout_constraintVertical_bias="0.07999998" />
 
             <Button
-                android:id="@+id/next_BTN"
-                android:layout_width="wrap_content"
+                android:id="@+id/submit_BTN"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimaryDark"
-                android:text="NEXT"
+                android:text="SUBMIT"
                 android:textColor="@color/WhiteFFFFFF"
                 android:textSize="@dimen/_14ssp"
                 android:textStyle="bold"
@@ -97,11 +91,25 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/venue_sub_events_ET"
+                app:layout_constraintTop_toBottomOf="@+id/event_image_IV"
                 app:layout_constraintVertical_bias="0.1" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:progressTint="@color/IndianRed"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </android.support.constraint.ConstraintLayout>
+
 
     </android.support.v7.widget.CardView>
 
