--- a/app/src/main/res/layout/activity_new_venue_3.xml
+++ b/app/src/main/res/layout/activity_new_venue_3.xml
@@ -5,7 +5,7 @@
     android:background="@drawable/gradient_blue"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.NewEventFirstActivity">
+    tools:context=".activities.NewEventSecondActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
