--- a/app/src/main/res/layout/activity_new_event_4.xml
+++ b/app/src/main/res/layout/activity_new_event_4.xml
@@ -99,13 +99,16 @@
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:progressTint="@color/IndianRed"
+                android:indeterminateTint="@color/WhiteFFFFFF"
+                android:indeterminateTintMode="src_in"
+                android:elevation="@dimen/_2sdp"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/event_image_IV"
+                app:layout_constraintVertical_bias="0.1"/>
 
 
         </android.support.constraint.ConstraintLayout>
