--- a/app/src/main/res/layout/activity_new_venue_3.xml
+++ b/app/src/main/res/layout/activity_new_venue_3.xml
@@ -51,12 +51,11 @@
                 android:id="@+id/venue_image__upload_BTN"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/round_shpae_blue10e7dc"
-                android:padding="@dimen/_5sdp"
+                android:background="@color/WhiteFFFFFF"
+                android:padding="@dimen/_10sdp"
                 android:text="Venue Image Upload"
                 android:textAllCaps="false"
-                android:textColor="@color/WhiteFFFFFF"
-                android:textColorHint="@color/GreyCDCDCD"
+                android:textColor="@color/Black000000"
                 android:textSize="@dimen/_14ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +75,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/submit_BTN"
                 app:layout_constraintTop_toBottomOf="@+id/venue_image__upload_BTN"
-                app:layout_constraintVertical_bias="0.07999998" />
+                app:layout_constraintVertical_bias="0.08" />
 
             <Button
                 android:id="@+id/submit_BTN"
