--- a/app/src/main/res/layout/activity_new_venue_2.xml
+++ b/app/src/main/res/layout/activity_new_venue_2.xml
@@ -84,7 +84,7 @@
                 android:inputType="textPersonName"
                 android:padding="@dimen/_10sdp"
                 android:textSize="@dimen/_14ssp"
-                android:textColor="@color/WhiteFFFFFF"
+                android:textColor="@color/Black000000"
                 android:textColorHint="@color/GreyCDCDCD"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
