--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -87,4 +87,22 @@
         app:layout_constraintVertical_bias="0.55" />
 
 
+    <ProgressBar
+        android:id="@+id/progressbarPB"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/_5sdp"
+        android:visibility="invisible"
+        android:indeterminateTint="@color/WhiteFFFFFF"
+        android:indeterminateTintMode="src_in"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.67"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.9"/>
+
 </android.support.constraint.ConstraintLayout>
