--- a/app/src/main/res/layout/layout_event.xml
+++ b/app/src/main/res/layout/layout_event.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_250sdp">
+    android:layout_height="@dimen/_300sdp">
 
     <ImageView
         android:id="@+id/event_layout_bg_IV"
@@ -81,14 +81,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-
             <TextView
-                android:id="@+id/event_date_TV"
+                android:id="@+id/event_tickets_TV"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:fontFamily="monospace"
                 android:gravity="center"
-                android:text="Date :\n10/01/2019"
+                android:text="Tickets : 100/100"
                 android:textColor="@color/WhiteFFFFFF"
                 android:textSize="@dimen/_10ssp"
                 android:textStyle="bold"
@@ -102,8 +101,31 @@
 
 
             <TextView
+                android:id="@+id/event_date_TV"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.5"
+                android:layout_height="0dp"
+                android:fontFamily="monospace"
+                android:gravity="center"
+                android:text="Date :\n10/01/2019"
+                android:textColor="@color/WhiteFFFFFF"
+                android:textSize="@dimen/_10ssp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_default="percent"
+                app:layout_constraintHeight_percent="0.25"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/event_tickets_TV" />
+
+
+            <TextView
                 android:id="@+id/event_time_TV"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.5"
                 android:layout_height="0dp"
                 android:fontFamily="monospace"
                 android:gravity="center"
@@ -115,9 +137,9 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_default="percent"
                 app:layout_constraintHeight_percent="0.25"
-                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/event_date_TV" />
+                app:layout_constraintTop_toBottomOf="@+id/event_tickets_TV" />
 
         </android.support.constraint.ConstraintLayout>
 
@@ -150,7 +172,7 @@
         android:layout_height="0dp"
         android:background="#cc000000"
         android:fontFamily="monospace"
-        android:gravity="start|center"
+        android:gravity="start|top"
         android:paddingLeft="@dimen/_5sdp"
         android:text="Address : Building no. 40, California"
         android:textColor="@color/WhiteFFFFFF"
@@ -159,11 +181,60 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent="0.2"
+        app:layout_constraintHeight_percent="0.15"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/venue_name_TV"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/delete_event_BTN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/round_shpae_indianred"
+        android:fontFamily="sans-serif-condensed"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        android:padding="@dimen/_2sdp"
+        android:paddingStart="@dimen/_5sdp"
+        android:paddingEnd="@dimen/_5sdp"
+        android:elevation="@dimen/_3sdp"
+        android:text="Delete Event"
+        android:textAllCaps="false"
+        android:textColor="@color/WhiteFFFFFF"
+        android:textSize="@dimen/_10ssp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.98" />
+
+
+    <Button
+        android:id="@+id/bookings_BTN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/round_shpae_persianpink"
+        android:fontFamily="sans-serif-condensed"
+        android:minWidth="0dp"
+        android:minHeight="0dp"
+        android:padding="@dimen/_2sdp"
+        android:paddingStart="@dimen/_5sdp"
+        android:paddingEnd="@dimen/_5sdp"
+        android:elevation="@dimen/_3sdp"
+        android:text="Bookings"
+        android:textAllCaps="false"
+        android:textColor="@color/WhiteFFFFFF"
+        android:textSize="@dimen/_10ssp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.98" />
 
 
 </android.support.constraint.ConstraintLayout>
