--- a/app/src/main/res/layout/fragment_hot_venues.xml
+++ b/app/src/main/res/layout/fragment_hot_venues.xml
@@ -25,11 +25,12 @@
         android:id="@+id/venues_RV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/layout_venue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/layout_venue" />
 
 </android.support.constraint.ConstraintLayout>
